--- a/apps/mobile/eas.json
+++ b/apps/mobile/eas.json
@@ -12,7 +12,7 @@
     },
     "production": {
       "android": {
-        "buildType": "app-bundle"
+        "buildType": "apk"
       },
       "env": {
         "EXPO_PUBLIC_SUPABASE_URL": "https://ghinjhboerdgpnugraks.supabase.co",
