--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -7,6 +7,8 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
+    "build:android": "eas build --platform android --profile production",
+    "build:android:preview": "eas build --platform android --profile preview",
     "lint": "eslint ."
   },
   "dependencies": {
