--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "RateMyRide",
+    "name": "QrRate",
     "slug": "kombirate",
     "scheme": "kombirate",
     "version": "0.1.0",
