--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^5.4.1",
+    "@stripe/stripe-js": "^8.5.3",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.83.0",
     "@types/qrcode": "^1.5.6",
@@ -17,7 +19,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
-    "recharts": "^3.5.0"
+    "recharts": "^3.5.0",
+    "stripe": "^20.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
