--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,6 +14,7 @@
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.83.0",
     "@types/qrcode": "^1.5.6",
+    "jspdf": "^3.0.4",
     "next": "^14.0.0",
     "qrcode": "^1.5.4",
     "react": "^18.2.0",
@@ -23,6 +24,7 @@
     "stripe": "^20.0.0"
   },
   "devDependencies": {
+    "@types/jspdf": "^2.0.0",
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
